[gd_scene load_steps=19 format=3 uid="uid://7k8yls7isrca"]

[ext_resource type="Script" path="res://actors/player/player.gd" id="1_5gi23"]
[ext_resource type="PackedScene" uid="uid://c3gyluwelgvy3" path="res://actors/player/interact_label.tscn" id="2_440br"]
[ext_resource type="Texture2D" uid="uid://dx4rc0mo8at1y" path="res://actors/player/tempPlayerSpriteSheet.png" id="2_h6lg6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_updys"]
size = Vector2(60, 20)

[sub_resource type="Animation" id="Animation_iwdhp"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.133333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_vqpqt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_lxlv8"]
resource_name = "idle_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.266667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_oe82o"]
resource_name = "idle_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.233333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_moghi"]
resource_name = "idle_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(4, 0)]
}

[sub_resource type="Animation" id="Animation_rls00"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ef5fk"]
_data = {
"Idle": SubResource("Animation_iwdhp"),
"RESET": SubResource("Animation_vqpqt"),
"idle_down": SubResource("Animation_rls00"),
"idle_left": SubResource("Animation_lxlv8"),
"idle_right": SubResource("Animation_oe82o"),
"idle_up": SubResource("Animation_moghi")
}

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_a1fe6"]

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_x1js0"]

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_hi75r"]

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_5aiyi"]

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_unj8l"]
blend_point_0/node = SubResource("AnimationNodeBlendSpace2D_a1fe6")
blend_point_0/pos = Vector2(0, 0.9)
blend_point_1/node = SubResource("AnimationNodeBlendSpace2D_x1js0")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeBlendSpace2D_hi75r")
blend_point_2/pos = Vector2(0, -0.9)
blend_point_3/node = SubResource("AnimationNodeBlendSpace2D_5aiyi")
blend_point_3/pos = Vector2(-1, 0)

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_rjpbk"]
states/IDLE/node = SubResource("AnimationNodeBlendSpace2D_unj8l")
states/IDLE/position = Vector2(358, 37)

[sub_resource type="CircleShape2D" id="CircleShape2D_cejil"]
radius = 92.1358

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animation_tree")]
y_sort_enabled = true
collision_mask = 4
motion_mode = 1
script = ExtResource("1_5gi23")
animation_tree = NodePath("AnimationTree")

[node name="MovementCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_updys")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_h6lg6")
centered = false
offset = Vector2(-50, -100)
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ef5fk")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_rjpbk")
parameters/IDLE/blend_position = Vector2(-0.985692, 0.00884962)
parameters/IDLE/0/blend_position = Vector2(0, 0)
parameters/IDLE/1/blend_position = Vector2(0, 0)
parameters/IDLE/2/blend_position = Vector2(0, 0)
parameters/IDLE/3/blend_position = Vector2(0, 0)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="InteractCollider" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractCollider"]
position = Vector2(0, -50)
shape = SubResource("CircleShape2D_cejil")

[node name="InteractLabel" parent="." node_paths=PackedStringArray("player") instance=ExtResource("2_440br")]
visible = false
offset_top = -200.0
offset_right = 1061.0
offset_bottom = -32.0
scale = Vector2(0.3, 0.3)
player = NodePath("..")

[connection signal="area_entered" from="InteractCollider" to="." method="approached_object"]
[connection signal="area_exited" from="InteractCollider" to="." method="left_object"]
